<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pij.foursq.ui.search.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText android:id="@+id/input"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/screen_edge_right"
                  android:hint="@string/search_input_hint"
                  android:padding="@dimen/screen_edge_right"/>

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="match_parent">

            <TextView android:id="@+id/empty"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_margin="@dimen/screen_edge_right"
                      android:hint="@string/search_no_search"
                      android:padding="@dimen/screen_edge_right"/>
            <android.support.v7.widget.RecyclerView android:id="@+id/search_list"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    app:layoutManager="LinearLayoutManager"
                                                    tools:listitem="@layout/search_list_item"/>

        </FrameLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
